--- a/index.html
+++ b/index.html
@@ -525,7 +525,8 @@
 
   
 
-
+<main id="main-content">
+  <section aria-label="Joshua Hong Career Overview">
  <div class="insight-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <input type="checkbox" id="card-toggle" style="display: none;">
@@ -694,7 +695,7 @@
       <div style="width: 280px; height: 350px; border-radius: 20px; overflow: hidden; box-shadow: 0 10px 25px rgba(0,0,0,0.1); border: 1px solid #e1e8ed; flex-shrink: 0; margin: 0;">
         <img src="https://lh3.googleusercontent.com/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv" 
              style="width: 100%; height: 100%; object-fit: cover; display: block;" 
-             alt="Joshua Hong Profile">
+             alt="Joshua Hong - NCAA Division I Golfer at UTSA Profile Portrait">
       </div>
 
       <div style="flex: 1; min-width: 280px; max-width: 100%; background: #f4f7f9; padding: 30px; border-radius: 25px; border: 1px solid #e1e8ed; box-sizing: border-box; display: flex; flex-direction: column; justify-content: center;">
@@ -889,7 +890,7 @@
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 30px; justify-content: center;">
       <div style="width: 100%; max-width: 320px; margin: 0 auto;">
         <div style="width: 100%; aspect-ratio: 1/1; border-radius: 20px; border: 4px solid #c98a2e; overflow: hidden; position: relative; margin-bottom: 18px; box-shadow: 0 15px 30px rgba(0,0,0,0.1);">
-          <img src="https://lh3.googleusercontent.com/d/1OGsiHtOY3dFr9yJsjWb5UEgxQKdVtbFy" style="width: 100%; height: 100%; object-fit: cover;" alt="Sportsmanship Award">
+          <img src="https://lh3.googleusercontent.com/d/1OGsiHtOY3dFr9yJsjWb5UEgxQKdVtbFy" style="width: 100%; height: 100%; object-fit: cover;" alt="Joshua Hong receiving the Billy Dettlaff Sportsmanship Award at TPC Sawgrass">
           <div style="position: absolute; top: 15px; left: 15px; background: #c98a2e; color: white; padding: 6px 12px; border-radius: 8px; font-size: 12px; font-weight: 800; letter-spacing: 1px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">HONOR</div>
         </div>
         <p style="margin: 0; font-size: 15px; color: #455a64; line-height: 1.7; font-weight: 500;">
@@ -899,7 +900,7 @@
 
       <div style="width: 100%; max-width: 320px; margin: 0 auto;">
         <div style="width: 100%; aspect-ratio: 1/1; border-radius: 20px; border: 4px solid #0c2340; overflow: hidden; position: relative; margin-bottom: 18px; box-shadow: 0 15px 30px rgba(0,0,0,0.1);">
-          <img src="https://lh3.googleusercontent.com/d/1GP046f-FyrCVwL6HhlYtGmr0E2IT1efY" style="width: 100%; height: 100%; object-fit: cover;" alt="TPC Sawgrass Competition">
+          <img src="https://lh3.googleusercontent.com/d/1GP046f-FyrCVwL6HhlYtGmr0E2IT1efY" style="width: 100%; height: 100%; object-fit: cover;" alt="Joshua Hong in competition during The Junior Players Championship at TPC Sawgrass">
           <div style="position: absolute; top: 15px; left: 15px; background: #0c2340; color: white; padding: 6px 12px; border-radius: 8px; font-size: 12px; font-weight: 800; letter-spacing: 1px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">THE JR. PLAYERS</div>
         </div>
         <p style="margin: 0; font-size: 15px; color: #455a64; line-height: 1.7; font-weight: 500;">
@@ -1053,13 +1054,14 @@
     </a>
   </div>
 
-  <div style="text-align: center; border-top: 1px solid #eee; padding: 30px 0 60px 0;">
+<div style="text-align: center; border-top: 1px solid #eee; padding: 30px 0 60px 0;">
     <p style="font-size: 12px; color: #bbb; text-transform: uppercase; letter-spacing: 3px; margin: 0;">
       Career Overview • Official Profile • Joshua Hong
     </p>
   </div>
 
-</div>
-</div>
+  </section>
+</main>
+
 </body>
 </html>
