--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Comprehensive NCAA Division I scoring records and performance analysis for Joshua Hong at UTSA. Detailed tracking of tournament finishes and season-by-season scoring averages.">
   <link rel="canonical" href="https://www.joshuahonggolf.com/ncaa-stats.html">
 
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://raw.githubusercontent.com https://lh3.googleusercontent.com https://www.google.com; frame-ancestors 'none';">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://raw.githubusercontent.com https://lh3.googleusercontent.com https://www.google.com https://drive.google.com; frame-ancestors 'none';">
   
  <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
@@ -243,16 +243,14 @@
 
 <div class="image-section" style="max-width: 900px; margin: 0 auto 10px; padding: 0 15px; box-sizing: border-box;">
     <div style="width: 100%; border-radius: 25px; overflow: hidden; box-shadow: 0 20px 40px rgba(0,0,0,0.18); background-color: #ffffff; border: 1px solid #e2e8f0;">
-        <img src="https://drive.google.com/thumbnail?id=11fyK0kkDZxFBu-A3fonPZwXJirY2VRty&sz=w1200" 
+        <img src="https://lh3.googleusercontent.com/d/11fyK0kkDZxFBu-A3fonPZwXJirY2VRty" 
              style="width: 100%; height: auto; display: block; object-fit: contain;" 
-             alt="Joshua Hong Performance"
-             onerror="this.src='https://drive.google.com/uc?export=view&id=11fyK0kkDZxFBu-A3fonPZwXJirY2VRty';">
+             alt="Joshua Hong Performance">
     </div>
 </div>
     <div id="Tournament-Schedule-Scoring" style="padding-top: 0px;">
     </div>
 </div>
-  
 
   
 <div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
