--- a/news-media.html
+++ b/news-media.html
@@ -232,7 +232,7 @@
 
   
 
-  <div style="font-family: 'Segoe UI', Arial, sans-serif; max-width: 850px; width: 100%; margin: auto; padding: 20px; color: #333; background-color: #ffffff; box-sizing: border-box;">
+ <div style="font-family: 'Segoe UI', Arial, sans-serif; max-width: 850px; width: 100%; margin: auto; padding: 20px; color: #333; background-color: #ffffff; box-sizing: border-box;">
     
     <div style="border-bottom: 2px solid #0c2340; padding-bottom: 12px; margin-bottom: 40px;">
       <h2 style="margin: 0; color: #0c2340; font-size: 20px; font-weight: 700; letter-spacing: 0.3px;">
@@ -253,7 +253,7 @@
         <div style="border: 1px solid #0c2340; border-radius: 16px; overflow: hidden; background: #fff; box-shadow: 0 10px 20px rgba(0,0,0,0.1); transition: 0.3s;">
           <div style="display: flex; flex-direction: row; align-items: center; flex-wrap: wrap;">
             <div style="flex: 1; background: #f8f8f8; min-width: 300px; width: 100%; display: flex; align-items: center; justify-content: center;">
-              <img src="https://lh3.googleusercontent.com/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv" alt="Joshua Hong CGN Highlight" style="width: 100%; height: auto; max-height: 450px; object-fit: contain; display: block;">
+              <img src="https://lh3.googleusercontent.com/d/ID" alt="Joshua Hong CGN Highlight" style="width: 100%; height: auto; max-height: 450px; object-fit: contain; display: block;">
             </div>
             <div style="flex: 1.2; padding: 30px; display: flex; flex-direction: column; justify-content: center; min-width: 300px;">
               <div style="font-size: 12px; color: #ff5a00; font-weight: bold; margin-bottom: 10px; letter-spacing: 1px;">CGN PLAYER HIGHLIGHT</div>
