--- a/news-media.html
+++ b/news-media.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png" sizes="32x32">
 <link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png">
@@ -8,7 +9,7 @@
   <meta name="description" content="Official news, media coverage, and performance highlights for Joshua Hong at UTSA.">
   <link rel="canonical" href="https://www.joshuahonggolf.com/news-media.html">
 
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://raw.githubusercontent.com https://lh3.googleusercontent.com https://www.google.com https://drive.google.com http://googleusercontent.com https://img.youtube.com; frame-ancestors 'none';">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://raw.githubusercontent.com https://lh3.googleusercontent.com https://www.google.com https://drive.google.com http://googleusercontent.com https://img.youtube.com https://www.joshuahonggolf.com; frame-ancestors 'none';">
   
  <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
@@ -19,6 +20,15 @@
   </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    /* 상단 헤더 및 레이아웃 복구용 핵심 CSS */
+    .header-wrapper { display: flex; align-items: center; justify-content: space-between; padding: 0 40px; height: 80px; }
+    .nav-links { display: flex; gap: 30px; align-items: center; }
+    .nav-links a { text-decoration: none; color: #444; font-family: 'Oswald', sans-serif; font-size: 14px; text-transform: uppercase; }
+    .logo-img { height: 50px; width: auto; }
+    svg { vertical-align: middle; }
+  </style>
 </head>
 
 <body>
@@ -43,7 +53,7 @@
         <div style="border: 1px solid #0c2340; border-radius: 16px; overflow: hidden; background: #fff; box-shadow: 0 10px 20px rgba(0,0,0,0.1); transition: 0.3s;">
           <div style="display: flex; flex-direction: row; align-items: center; flex-wrap: wrap;">
             <div style="flex: 1; background: #f8f8f8; min-width: 300px; width: 100%; display: flex; align-items: center; justify-content: center;">
-              <img src="https://lh3.googleusercontent.com/d/ID" alt="Joshua Hong CGN Highlight" style="width: 100%; height: auto; max-height: 450px; object-fit: contain; display: block;">
+              <img src="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-interview-cgn.jpg" alt="Joshua Hong CGN Highlight" style="width: 100%; height: auto; max-height: 450px; object-fit: contain; display: block;">
             </div>
             <div style="flex: 1.2; padding: 30px; display: flex; flex-direction: column; justify-content: center; min-width: 300px;">
               <div style="font-size: 12px; color: #ff5a00; font-weight: bold; margin-bottom: 10px; letter-spacing: 1px;">CGN PLAYER HIGHLIGHT</div>
@@ -64,7 +74,7 @@
 
     <h3 style="color: #0c2340; font-size: 18px; margin-bottom: 20px; display: flex; align-items: center; font-weight: 800; letter-spacing: -0.5px;">
       <span style="margin-right: 12px; display: flex; align-items: center;">
-        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
           <rect x="2" y="2" width="20" height="20" rx="2.18" ry="2.18"></rect>
           <line x1="7" y1="2" x2="7" y2="22"></line>
           <line x1="17" y1="2" x2="17" y2="22"></line>
@@ -108,7 +118,7 @@
 
     <h3 style="color: #0c2340; font-size: 18px; margin-top: 40px; margin-bottom: 20px; display: flex; align-items: center; font-weight: 800; letter-spacing: -0.5px;">
       <span style="margin-right: 12px; display: flex; align-items: center;">
-        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
           <path d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-2 2Zm0 0a2 2 0 0 1-2-2v-9c0-1.1.9-2 2-2h2"></path>
           <path d="M18 14h-8"></path>
           <path d="M15 18h-5"></path>
