--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
     }
   </script>
 
-<div class="profile-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 130px 15px 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="profile-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 110px 15px 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
-  <div style="text-align: center; margin-bottom: 25px; padding-top: 20px;">
+  <div style="text-align: center; margin-bottom: 25px; padding-top: 15px;">
   <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1px; text-transform: uppercase; line-height: 1.1;">
   JOSHUA HONG
 </h1>
@@ -220,7 +220,7 @@
     </p>
   </div>
 
-<div style="margin-bottom: 25px; border-radius: 20px; overflow: hidden; box-shadow: 0 15px 35px rgba(0,0,0,0.15); background-color: #f8f8f8; position: relative;">
+<div style="margin-bottom: 20px; border-radius: 20px; overflow: hidden; box-shadow: 0 15px 35px rgba(0,0,0,0.15); background-color: #f8f8f8; position: relative;">
     <a href="https://drive.google.com/uc?export=view&id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI" target="_blank" style="display:block; text-decoration: none;">
       <img src="https://drive.google.com/thumbnail?id=1laJtS3I1EaKcYR5U1Hk0KM-2lG1tRdfI&sz=w1200" 
            style="width: 100%; display: block; object-fit: cover; aspect-ratio: 16 / 9; object-position: center 20%;" 
@@ -230,15 +230,12 @@
     </a>
 </div>
 
-<div class="schedule-section" style="max-width: 900px; margin: 40px auto; padding: 0 15px; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="schedule-section" style="max-width: 900px; margin: 20px auto; padding: 0 15px; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
-  <div style="position: relative; text-align: center; margin-bottom: 40px; padding: 20px 0; overflow: hidden;">
+  <div style="position: relative; text-align: center; margin-bottom: 25px; padding: 10px 0; overflow: hidden;">
     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: clamp(40px, 10vw, 80px); font-weight: 900; color: rgba(12, 35, 64, 0.04); white-space: nowrap; z-index: 1; pointer-events: none; letter-spacing: -2px;">
       UTSA
     </div>
-
-    
-
 
 <div style="max-width: 900px; margin: 0 auto 30px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <style>
@@ -344,8 +341,8 @@
 
 <div style="margin-bottom: 20px; display: flex; align-items: center; justify-content: center; gap: 15px;">
   <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 60px;"></div>
-  <h2 style="margin: 0; color: #c98a2e; font-size: 13px; font-weight: 800; letter-spacing: 4px; text-transform: uppercase;">
-    On-Going Activity
+  <h2 style="margin: 0; color: #c98a2e; font-size: 11px; font-weight: 800; letter-spacing: 2px; text-transform: none; text-shadow: 1px 1px 2px rgba(0,0,0,0.05); font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+    On-going Activity
   </h2>
   <div style="flex-grow: 1; height: 1px; background: #edf2f7; max-width: 60px;"></div>
 </div>
