--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         </div>
         
         <div style="margin-top: 20px; font-size: 13px; color: #c98a2e; font-weight: 800; text-align: right; text-transform: uppercase; letter-spacing: 0.5px;">
-          View Participants <span style="font-size: 16px; margin-left: 3px;">↗</span>
+          View Leaderboard <span style="font-size: 16px; margin-left: 3px;">↗</span>
         </div>
       </div>
     </a>
