--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1261,6 +1261,8 @@
     <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg" onclick="popupGallery(12)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
     <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg" onclick="popupGallery(13)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
     <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg" onclick="popupGallery(14)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-line-up-utrgv.jpeg" onclick="popupGallery(14)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+
   </div>
 
   <script>
@@ -1279,7 +1281,8 @@
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg",
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg",
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg",
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg"
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg",
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-line-up-utrgv.jpeg"
     ];
 
     function popupGallery(index) {
