--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -309,7 +309,7 @@
         <span style="background: #0c2340; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px;">UPCOMING</span>
         <div>
           <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Compadres Collegiate (UTRGV)</h2>
-          <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">Iberostar Playa Paraiso | Par 72</div>
+          <div style="font-size: 12px; color: #7f8c8d; font-weight: 600;">Iberostar Playa Paraiso | Par 71/6,701 yards</div>
         </div>
       </div>
       <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Jan 29, 2026</div>
@@ -572,7 +572,7 @@
             <td class="col-left">
               <div style="font-weight: 600; font-size: 13px;">Feb 2-4, 2026</div>
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Compadres Collegiate (UTRGV)</div>
-              <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX</div>
+              <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX | Par 71/6,701 yards</div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value">-</span></div>
                 <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">-</span></div>
