--- a/reference-links.html
+++ b/reference-links.html
@@ -8,7 +8,6 @@
   <title>References & Official Links | Joshua Hong Golf | UTSA</title>
   <meta name="description" content="Official external links and verified references for Joshua Hong. Includes UTSA Men's Golf roster profile, tournament scoring portals, and professional golf associations.">
   <link rel="canonical" href="https://www.joshuahonggolf.com/reference-links.html">
-
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
@@ -18,15 +17,11 @@
     gtag('config', 'G-H1JW8YBDZ8');
   </script>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Links | Joshua Hong Golf</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-  <noscript>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
-  </noscript>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 
   <style>
     /* 1. 기본 설정 */
