--- a/fall-2025-archive.html
+++ b/fall-2025-archive.html
@@ -8,8 +8,6 @@
   <title>NCAA Statistics & Records | Joshua Hong Golf | UTSA</title>
   <meta name="description" content="Comprehensive NCAA Division I scoring records and performance analysis for Joshua Hong at UTSA. Detailed tracking of tournament finishes and season-by-season scoring averages.">
   <link rel="canonical" href="https://www.joshuahonggolf.com/ncaa-stats.html">
-
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://raw.githubusercontent.com https://lh3.googleusercontent.com https://www.google.com; frame-ancestors 'none';">
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
@@ -19,11 +17,13 @@
     gtag('config', 'G-H1JW8YBDZ8');
   </script>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NCAA Stats | Joshua Hong Golf</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 
+  
   <style>
     /* 1. 기본 설정 */
     html, body {
@@ -614,3 +614,5 @@
   </div>
 </div>
 
+</body>
+</html>
