--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -327,9 +327,20 @@
           </tr>
         </thead>
         <tbody>
+
           <tr>
             <td class="col-left">
-              <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1</div>
+              <div style="display: flex; align-items: center; gap: 8px;">
+                <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1</div>
+                <a href="/images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-UTRGV-Round-1-pairing.jpeg" target="_blank" style="display: flex; align-items: center; gap: 4px; text-decoration: none; background: #f1f5f9; padding: 2px 6px; border-radius: 4px; border: 1px solid #e2e8f0;">
+                  <span style="font-size: 10px; font-weight: 800; color: #64748b; text-transform: uppercase; letter-spacing: 0.5px;">Pairing</span>
+                  <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                    <polyline points="15 3 21 3 21 9"></polyline>
+                    <line x1="10" y1="14" x2="21" y2="3"></line>
+                  </svg>
+                </a>
+              </div>
               <div style="font-size: 11px; color: #7f8c8d;">Feb 1, 2026</div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
@@ -342,6 +353,8 @@
             <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Upcoming</td>
             <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           </tr>
+
+          
           <tr>
             <td class="col-left">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2</div>
