--- a/index.html
+++ b/index.html
@@ -610,14 +610,23 @@
           </span>
         </div>
 
-        <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px;">
-          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Winter Preparation & Spring Outlook</p>
-          <p style="margin-bottom: 15px;">January training was <strong>strategically focused</strong> on tightening long-iron dispersion and increasing short-game consistency. This technical block aimed to stabilize mid-to-long range scoring opportunities.</p>
-          <p style="margin-bottom: 15px;">Initial performance during the Jan 22-23 qualifying rounds (R1-R2) demonstrated improved ball-striking stability under competitive pressure. Technical refinement remains ongoing to maintain this consistency across all four rounds.</p>
-          <p style="margin-bottom: 0; color: #fff; font-weight: 600;">The objective for the Spring season is to maintain a high level of competitive readiness and consistently contribute to the team’s overall performance in every tournament.</p>
+      <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #c98a2e; padding-left: 25px;">
+          <p style="margin: 0 0 15px 0; color: #c98a2e; font-weight: 700; font-size: 17px;">Winter Preparation & Competitive Assessment</p>
+          <p style="margin-bottom: 15px;">
+            January training was structured around refining <strong>long-iron dispersion</strong> and reinforcing <strong>short-game execution</strong>, with the objective of stabilizing scoring opportunities from mid-to-long range.
+          </p>
+          <p style="margin-bottom: 15px;">
+            Performance during the Jan 22–23 qualifying rounds (R1–R2) reflected improved ball-striking consistency under competitive conditions. During Round 3, a separate data point was recorded as Joshua tested aggressive driving lines on the Oaks Course in a <strong>high-margin scenario</strong>. This round provided useful feedback on driver control and decision-making under full-power execution.
+          </p>
+          <p style="margin-bottom: 15px;">
+            A corrective training session followed on Jan 29 at TPC San Antonio, focusing on driver alignment and short-game touch to recalibrate feel and reestablish R1–R2 performance benchmarks.
+          </p>
+          <p style="margin-bottom: 0; color: #fff; font-weight: 600;">
+            Preparation continues with the goal of entering the Spring season fully calibrated and ready to contribute consistently across all competitive rounds.
+          </p>
         </div>
       </div>
-
+      
       <div>
         <label for="card-toggle" class="toggle-btn">
           VIEW FALL 2025 ANALYSIS (ARCHIVE) <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="9 18 15 12 9 6"></polyline></svg>
